force-app/main/default/objects/Client_Admin__c/Client_Admin__c.object-meta.xml
<CustomObject>
    <description>The admins attached to a Client.</description>
    <label>Client Admin</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Admins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>