force-app/main/default/objects/Client_Admin__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The account this Product Admin is attached to</description>
    <inlineHelpText>The account this Product Admin is attached to</inlineHelpText>
    <label>Prospect-Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Admins</relationshipLabel>
    <relationshipName>Product_Admins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>