force-app/main/default/objects/Client_Admin__c/fields/ADM401__c.field-meta.xml
<CustomField>
    <fullName>ADM401__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an ADM401 admin?</description>
    <inlineHelpText>Is this an ADM401 admin?</inlineHelpText>
    <label>ADM401</label>
    <type>Checkbox</type>
</CustomField>