force-app/main/default/objects/Client_Admin__c/fields/Contact_Types__c.field-meta.xml
<CustomField>
    <fullName>Contact_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The different types of roles this contact performs.</inlineHelpText>
    <label>Contact Types</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>