force-app/main/default/objects/Client_Admin__c/fields/Envelopes__c.field-meta.xml
<CustomField>
    <fullName>Envelopes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an Envelopes Admin?</description>
    <inlineHelpText>Is this an Envelopes Admin?</inlineHelpText>
    <label>Envelopes</label>
    <type>Checkbox</type>
</CustomField>