force-app/main/default/objects/Client_Admin__c/fields/HRS125__c.field-meta.xml
<CustomField>
    <fullName>HRS125__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an HRS125 Admin?</description>
    <inlineHelpText>Is this an HRS125 Admin?</inlineHelpText>
    <label>HRS125</label>
    <type>Checkbox</type>
</CustomField>