force-app/main/default/objects/Client_Admin__c/fields/HRSADM__c.field-meta.xml
<CustomField>
    <fullName>HRSADM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an HRSADM Admin?</description>
    <inlineHelpText>Is this an HRSADM Admin?</inlineHelpText>
    <label>HRSADM</label>
    <type>Checkbox</type>
</CustomField>