force-app/main/default/objects/Client_Admin__c/fields/MMS__c.field-meta.xml
<CustomField>
    <fullName>MMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MMS</label>
    <type>Checkbox</type>
</CustomField>