force-app/main/default/objects/Client_Admin__c/fields/Premier_Cobra__c.field-meta.xml
<CustomField>
    <fullName>Premier_Cobra__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premier field</description>
    <label>Premier Cobra</label>
    <type>Checkbox</type>
</CustomField>