force-app/main/default/objects/Client_Admin__c/fields/Premier_EAP__c.field-meta.xml
<CustomField>
    <fullName>Premier_EAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premier field</description>
    <label>Premier EAP</label>
    <type>Checkbox</type>
</CustomField>