force-app/main/default/objects/Client_Admin__c/fields/Premier_Mailing_Labels__c.field-meta.xml
<CustomField>
    <fullName>Premier_Mailing_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premier field</description>
    <label>Premier Mailing Labels</label>
    <type>Checkbox</type>
</CustomField>