force-app/main/default/objects/Client_Admin__c/fields/Premier_Safety__c.field-meta.xml
<CustomField>
    <fullName>Premier_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premier field</description>
    <label>Premier Safety</label>
    <type>Checkbox</type>
</CustomField>