force-app/main/default/objects/Client_Admin__c/fields/Premier_Seminars__c.field-meta.xml
<CustomField>
    <fullName>Premier_Seminars__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premier</description>
    <label>Premier Seminars</label>
    <type>Checkbox</type>
</CustomField>