force-app/main/default/objects/Client_Admin__c/fields/Premier_Welcome_Letter__c.field-meta.xml
<CustomField>
    <fullName>Premier_Welcome_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Premier</description>
    <label>Premier Welcome Letter</label>
    <type>Checkbox</type>
</CustomField>