force-app/main/default/objects/Client_Admin__c/fields/TAA__c.field-meta.xml
<CustomField>
    <fullName>TAA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is a TAA Admin.</inlineHelpText>
    <label>TAA</label>
    <type>Checkbox</type>
</CustomField>